# library

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/api/v1/: __init__.py  dependencies.py  schemas.py
src/api/v1/routers/: book.py  book_file.py  publishing_house.py
src/core/: app.py  logger.py  setting.py
src/database/: mixin.py  model.py  session.py  typing.py
src/utils/: file.py
test/: conftest.py  test_database.py  test_settings.py
test/api/: test_book.py
test/api_routers/: test_book.py
test/core/: test_logger.py  test_settings.py
