[project]
name = "library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "colorlog>=6.9.0",
    "fastapi[all]>=0.115.12",
    "sqlalchemy[asyncio]>=2.0.40",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.11.2",
]
